*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5156 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -29,7 +29,7 @@
 	
 	<target name="delete-database-project" depends="init-database-properties">
 		<delete dir="${working.directory}/${application.database.cvs.module}" />
-		<delete file="${working.directory}/velocity.log" />
+		<delete file="${base.directory}/velocity.log" />
 	</target>
 	
 	<target name="update-database-project" depends="checkout-database-project">
