--- a/impex-build.properties
+++ b/impex-build.properties
@@ -1,4 +1,4 @@
-torque.project=${working.directory}/${torque.working.directory}
+torque.project=${working.directory}/${application.database.cvs.module}
 drivers.directory=/usr/local/tomcat/kuali/common/lib
 drivers.file.pattern=ojdbc*.jar,mysql*.jar
 target.zip=/tmp/kuldemo.zip
