*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5157 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -38,6 +38,8 @@
 		</delete>
 		<ant antfile="${impex.build.file}" target="export" inheritall="false" />
 		<echo message="" file="${working.directory}/${application.database.cvs.module}/${application.database.incremental.file}" />
+		<cvs command="add ${working.directory}/${application.database.cvs.module}" />
+		<cvs command="add ${working.directory}/${application.database.cvs.module}/doc" />
 		<cvs command="add ${working.directory}/${application.database.cvs.module}/${application.database.xml}" />
 		<cvs command="add ${working.directory}/${application.database.cvs.module}/${application.database.docs}" />
 		<cvs command="update ${working.directory}/${application.database.cvs.module}" />
