--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project name="kul-cfg-envs" default="init-database-properties">
+<project name="kul-cfg-envs" default="init-database-properties" basedir=".">
 	<target name="init-java-properties">
 		<property file="${java.properties.file}" />
 		<condition property="import.into.mysql">
