*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5168 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -30,7 +30,7 @@
 	<target name="delete-database-project" depends="init-database-properties">
 	</target>
 	
-	<target name="update-database-project" depends="init-databae-properties">
+	<target name="update-database-project" depends="init-database-properties">
 <!--		<delete>
 			<fileset dir="${application.database.cvs.module}" includes="${application.database.xml},${application.database.docs}.css,${application.database.docs}.html,${application.database.docs}.dtd,${application.database.incremental.file}" />
 		</delete>
