--- a/build.xml
+++ b/build.xml
@@ -28,9 +28,15 @@
 		</delete>
 		<ant antfile="${impex.build.file}" target="export" inheritall="false" />
 	</target>
-
-	<target name="import" depends="init-database-properties">
+	
+	<target name="update-database" depends="init-database-properties">
+		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
+		<cvs command="checkout ${application.database.cvs.module}" tag="${project.cvs.tag}" />
 		<ant antfile="${impex.build.file}" target="empty-schema" inheritall="false" />
 		<ant antfile="${impex.build.file}" target="import" inheritall="false" />
+	</target>
+
+	<target name="import" depends="update-database">
+		<delete dir="${application.database.cvs.module}" />
 	</target>
 </project>
