*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5175 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -27,6 +27,7 @@
 			<fileset dir="${application.database.cvs.module}" includes="${application.database.xml},${application.database.docs}.css,${application.database.docs}.html,${application.database.docs}.dtd,${application.database.incremental.file}" />
 		</delete>
 		<ant antfile="${impex.build.file}" target="export" inheritall="false" />
+		<delete file="velocity.log" />
 	</target>
 	
 	<target name="update-database" depends="init-database-properties">
@@ -38,5 +39,6 @@
 
 	<target name="import" depends="update-database">
 		<delete dir="${application.database.cvs.module}" />
+		<delete file="velocity.log" />
 	</target>
 </project>
