Fixed MySQL user creation command.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7036 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/impex-build.properties.sample
+++ b/impex/impex-build.properties.sample
@@ -69,7 +69,7 @@ oracle.empty.schema.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermai
 
 # MySQL commands
 
-mysql.create.user.command=CREATE USER '${import.torque.database.user}'@'localhost' IDENTIFIED BY PASSWORD '${import.torque.database.password}'
+mysql.create.user.command=CREATE USER '${import.torque.database.user}'@'localhost' IDENTIFIED BY '${import.torque.database.password}'
 
 mysql.grant.command=GRANT ALL ON ${import.torque.database.schema}.* TO '${import.torque.database.user}'@'localhost' WITH GRANT OPTION
 
