--- a/build.xml
+++ b/build.xml
@@ -33,7 +33,7 @@
 	
 	<target name="update-database" depends="init-database-properties">
 		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
-		<cvs command="checkout ${application.database.cvs.module}" tag="${project.cvs.tag}" />
+		<cvs cvsroot="${project.cvs.root}" package="${application.database.cvs.module}" tag="${project.cvs.tag}"/>
 		<ant antfile="${impex.build.file}" target="empty-schema" inheritall="false" />
 		<ant antfile="${impex.build.file}" target="import" inheritall="false" />
 	</target>
