--- a/build.xml
+++ b/build.xml
@@ -33,9 +33,17 @@
 	
 	<target name="update-database" depends="init-database-properties">
 		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
-		<cvs cvsroot="${project.cvs.root}" package="${application.database.cvs.module}" tag="${project.cvs.tag}"/>
+		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${application.database.cvs.module}" tag="${project.cvs.tag}"/>
 		<ant antfile="${impex.build.file}" target="empty-schema" inheritall="false" />
 		<ant antfile="${impex.build.file}" target="import" inheritall="false" />
+	</target>
+	
+	<target name="cvs-test" depends="init-database-properties">
+		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${application.database.cvs.module}" tag="${project.cvs.tag}"/>
+		<echo message="test" file="${application.database.cvs.module}/test.txt" />
+		<cvs command="add" cvsroot="${project.cvs.root}"><commandline><argument value="${application.database.cvs.module}/*" /></commandline></cvs>
+		<cvs command="remove" cvsroot="${project.cvs.root}"><commandline><argument value="${application.database.cvs.module}" /></commandline></cvs>
+		<cvs command="commit" cvsroot="${project.cvs.root}" package="${application.database.cvs.module}"><commandline><argument value="-m 'daily export'"/></commandline></cvs>
 	</target>
 
 	<target name="import" depends="update-database">
