--- a/build.xml
+++ b/build.xml
@@ -39,6 +39,7 @@
 	</target>
 	
 	<target name="cvs-test" depends="init-database-properties">
+		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
 		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${application.database.cvs.module}" tag="${project.cvs.tag}"/>
 		<echo message="test" file="${application.database.cvs.module}/test.txt" />
 		<cvs command="add" cvsroot="${project.cvs.root}"><commandline><argument value="${application.database.cvs.module}/*" /></commandline></cvs>
