--- a/build.xml
+++ b/build.xml
@@ -40,11 +40,12 @@
 	
 	<target name="cvs-test" depends="init-database-properties">
 		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
-		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${application.database.cvs.module}" tag="${project.cvs.tag}"/>
+		<echo message="${project.cvs.root}" />
+		<cvs command="checkout" package="${application.database.cvs.module}" tag="${project.cvs.tag}"/>
 		<echo message="test" file="${application.database.cvs.module}/test.txt" />
-		<cvs command="add" cvsroot="${project.cvs.root}"><commandline><argument value="${application.database.cvs.module}/*" /></commandline></cvs>
-		<cvs command="remove" cvsroot="${project.cvs.root}"><commandline><argument value="${application.database.cvs.module}" /></commandline></cvs>
-		<cvs command="commit" cvsroot="${project.cvs.root}" package="${application.database.cvs.module}"><commandline><argument value="-m 'daily export'"/></commandline></cvs>
+		<cvs command="add"><commandline><argument value="${application.database.cvs.module}/*" /></commandline></cvs>
+		<cvs command="remove"><commandline><argument value="${application.database.cvs.module}" /></commandline></cvs>
+		<cvs command="commit"><commandline><argument value="-m 'daily export'"/><argument value="${application.database.cvs.module}" /></commandline></cvs>
 	</target>
 
 	<target name="import" depends="update-database">
