*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5184 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -44,7 +44,9 @@
 		<echo message="${project.cvs.root}" />
 		<cvs command="checkout" package="${application.database.cvs.module}" tag="${project.cvs.tag}"/>
 		<echo message="test" file="${application.database.cvs.module}/test.txt" />
+		<exec executable="cvs"><arg line="add ${application.database.cvs.module}" /></exec>
 		<exec executable="cvs"><arg line="add ${application.database.cvs.module}/*" /></exec>
+		<exec executable="cvs"><arg line="add ${application.database.cvs.module}/doc" /></exec>
 		<exec executable="cvs"><arg line="add ${application.database.cvs.module}/doc/*" /></exec>
 		<exec executable="cvs"><arg line="remove ${application.database.cvs.module}" /></exec>
 		<exec executable="cvs"><arg line="update ${application.database.cvs.module}" /></exec>
