--- a/build.xml
+++ b/build.xml
@@ -44,9 +44,13 @@
 		<echo message="${project.cvs.root}" />
 		<cvs command="checkout" package="${application.database.cvs.module}" tag="${project.cvs.tag}"/>
 		<echo message="test" file="${application.database.cvs.module}/test.txt" />
+		<echo message="1" />
 		<exec executable="cvs" dir="${application.database.cvs.module}"><arg value="add" /></exec>
+		<echo message="2" />
 		<exec executable="cvs" dir="${application.database.cvs.module}"><arg value="add" /><arg value="*" /></exec>
+		<echo message="3" />
 		<exec executable="cvs" dir="${application.database.cvs.module}"><arg value="add" /><arg value="test.txt" /></exec>
+		<echo message="4" />
 		<exec executable="cvs"><arg value="add" /><arg value="${application.database.cvs.module}/doc/*" /></exec>
 		<exec executable="cvs"><arg value="remove" /><arg value="${application.database.cvs.module}" /></exec>
 		<exec executable="cvs"><arg value="update" /><arg value="${application.database.cvs.module}" /></exec>
