*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5190 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -42,15 +42,13 @@
 	<target name="cvs-test" depends="init-database-properties">
 		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
 		<echo message="${project.cvs.root}" />
-		<cvs command="checkout" package="${application.database.cvs.module}" tag="${project.cvs.tag}"/>
+		<cvs command="checkout" package="${application.database.cvs.module}" />
 		<echo message="test" file="${application.database.cvs.module}/test.txt" />
 		<echo message="1" />
-		<exec executable="cvs" dir="${application.database.cvs.module}"><arg value="add" /></exec>
+		<exec executable="cvs" dir="${application.database.cvs.module}"><arg value="add" /><arg value="*.txt" /></exec>
 		<echo message="2" />
-		<exec executable="cvs" dir="${application.database.cvs.module}"><arg value="add" /><arg value="*" /></exec>
-		<echo message="3" />
 		<exec executable="cvs" dir="${application.database.cvs.module}"><arg value="add" /><arg value="test.txt" /></exec>
-		<echo message="4" />
+		<echo message="3" />
 		<exec executable="cvs"><arg value="add" /><arg value="${application.database.cvs.module}/doc/*" /></exec>
 		<exec executable="cvs"><arg value="remove" /><arg value="${application.database.cvs.module}" /></exec>
 		<exec executable="cvs"><arg value="update" /><arg value="${application.database.cvs.module}" /></exec>
