*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5193 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -44,6 +44,7 @@
 		<echo message="${project.cvs.root}" />
 		<cvs command="checkout" package="${application.database.cvs.module}" />
 		<echo message="test" file="${application.database.cvs.module}/test.txt" />
+		<cvs command="-q diff -u -N" output="patch.txt"/>
 		<echo message="1" />
 		<exec executable="cvs"><arg value="add" /><arg path="${application.database.cvs.module}/*" /></exec>
 		<echo message="2" />
