--- a/build.xml
+++ b/build.xml
@@ -41,19 +41,10 @@
 	
 	<target name="cvs-test" depends="init-database-properties">
 		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
-		<echo message="${project.cvs.root}" />
-		<cvs command="checkout" package="${application.database.cvs.module}" />
+		<cvs cvsRoot="${project.cvs.root}" package="${application.database.cvs.module}" dest="${basedir}" />
 		<echo message="test" file="${application.database.cvs.module}/test.txt" />
-		<cvs command="update"><commandline><argument value="${application.database.cvs.module}" /></commandline></cvs>
+		<cvs dest="${basedir}" command="update"/>
 		<cvs command="-q diff -u -N" output="patch.txt"/>
-		<echo message="1" />
-		<exec executable="cvs"><arg value="add" /><arg path="${application.database.cvs.module}/*" /></exec>
-		<echo message="2" />
-		<exec command="cvs add ${application.database.cvs.module}/*" />
-		<exec command="cvs add ${application.database.cvs.module}/doc/*" />
-		<exec executable="cvs"><arg value="remove" /><arg value="${application.database.cvs.module}" /></exec>
-		<exec executable="cvs"><arg value="update" /><arg value="${application.database.cvs.module}" /></exec>
-		<exec executable="cvs"><arg value="commit" /><arg value="-m" /><arg value="daily export" /><arg value="${application.database.cvs.module}" /></exec>
 		<delete dir="${application.database.cvs.module}" />
 	</target>
 
