--- a/build.xml
+++ b/build.xml
@@ -47,6 +47,8 @@
 		<cvs dest="${basedir}" command="remove"/>
 		<cvs dest="${basedir}" command="update"/>
 		<cvs command="-q diff -u -N" output="patch.txt"/>
+		<cvs dest="${basedir}" command="patch -N patch.txt" />
+		<cvs dest="${basedir}" command="commit -m 'daily update'" />
 		<delete dir="${application.database.cvs.module}" />
 	</target>
 
