*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5199 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -44,10 +44,10 @@
 		<cvs cvsRoot="${project.cvs.root}" package="${application.database.cvs.module}" dest="${basedir}" />
 		<echo message="test" file="${application.database.cvs.module}/test.txt" />
 		<delete file="${application.database.cvs.module}/test-delete.txt" />
-		<cvs dest="${basedir}" command="remove"/>
-		<cvs dest="${basedir}" command="update"/>
-		<cvs command="-q diff -u -N" output="patch.txt"/>
-		<cvs dest="${basedir}" command="patch -N patch.txt" />
+		<cvs dest="${application.database.cvs.module}" command="remove"/>
+		<cvs dest="${application.database.cvs.module}" command="update"/>
+		<cvs dest="${application.database.cvs.module}" command="-q diff -u -N" output="patch.txt"/>
+		<cvs dest="${basedir}" command="patch patch.txt" />
 		<cvs dest="${basedir}" command="commit -m 'daily update'" />
 		<delete dir="${application.database.cvs.module}" />
 	</target>
