*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5200 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -47,8 +47,8 @@
 		<cvs dest="${application.database.cvs.module}" command="remove"/>
 		<cvs dest="${application.database.cvs.module}" command="update"/>
 		<cvs dest="${application.database.cvs.module}" command="-q diff -u -N" output="patch.txt"/>
-		<cvs dest="${basedir}" command="patch patch.txt" />
-		<cvs dest="${basedir}" command="commit -m 'daily update'" />
+		<cvs dest="${application.database.cvs.module}" command="patch patch.txt" />
+		<cvs dest="${application.database.cvs.module}" command="commit -m 'daily update'" />
 		<delete dir="${application.database.cvs.module}" />
 	</target>
 
