*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5202 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -40,7 +40,7 @@
 	</target>
 	
 	<target name="cvs-test" depends="init-database-properties">
-		<cvs cvsRoot="${project.cvs.root}" package="${application.database.cvs.module}" dest="${basedir}" />
+		<cvs package="${application.database.cvs.module}" dest="${basedir}" />
 		<echo message="test" file="${application.database.cvs.module}/test.txt" />
 		<delete file="${application.database.cvs.module}/test-delete.txt" />
 		<cvs dest="${application.database.cvs.module}" command="remove"/>
@@ -48,7 +48,6 @@
 		<cvs dest="${application.database.cvs.module}" command="-q diff -u -N" output="patch.txt"/>
 		<cvs dest="${application.database.cvs.module}" command="patch patch.txt" />
 		<cvs dest="${application.database.cvs.module}" command="commit -m 'daily update'" />
-		<delete dir="${application.database.cvs.module}" />
 	</target>
 
 	<target name="import" depends="update-database">
