*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5204 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -41,7 +41,8 @@
 	
 	<target name="cvs-test" depends="init-database-properties">
 		<cvs package="${application.database.cvs.module}" dest="${basedir}" />
-		<echo message="test" file="${application.database.cvs.module}/test.txt" />
+		<echo message="test" file="${application.database.cvs.module}/test2.txt" />
+		<echo message="test" file="${application.database.cvs.module}/test3.txt" />
 		<delete file="${application.database.cvs.module}/test-delete.txt" />
 		<cvs dest="${application.database.cvs.module}" command="remove"/>
 		<cvs dest="${application.database.cvs.module}" command="update"/>
