*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5207 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -46,7 +46,7 @@
 		<delete file="temp/${application.database.cvs.module}/test-delete.txt" />
 		<cvs dest="temp" command="remove"/>
 		<cvs dest="temp" command="update"/>
-		<cvs dest="temp" command="-q diff -u -N" output="patch.txt"/>
+		<cvs command="-q diff -u -N" output="patch.txt"/>
 		<loadfile srcfile="patch.txt" property="add.file.list">
 			<filterchain><replaceregex pattern="(\n\? )*" replace="" /></filterchain>
 		</loadfile>
