*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5210 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex-build.properties
+++ b/impex-build.properties
@@ -12,15 +12,15 @@ export.torque.database=${export.torque.database}
 export.torque.database.driver=${export.torque.database.driver}
 export.torque.database.url=${export.torque.database.url}
 export.torque.database.schema=${schema}
-export.torque.database.user=${user}
-export.torque.database.password=${password}
+export.torque.database.user=${datasource.username}
+export.torque.database.password=${datasource.password}
 
 import.torque.database=${import.torque.database}
 import.torque.database.driver=${import.torque.database.driver}
 import.torque.database.url=${import.torque.database.url}
 import.torque.database.schema=${schema}
-import.torque.database.user=${user}
-import.torque.database.password=${password}
+import.torque.database.user=${datasource.username}
+import.torque.database.password=${datasource.password}
 
 import.admin.user=${import.admin.user}
 import.admin.password=${import.admin.password}
