--- a/impex-build.properties
+++ b/impex-build.properties
@@ -27,9 +27,9 @@ import.admin.password=${import.admin.password}
 import.admin.url=${import.admin.url}
 
 oracle.usermaint.user=SYSTEM
-oracle.drop.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.drop_user( '${user}' ); END;
-oracle.create.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.create_user( '${user}', '${password}' ); END;
-oracle.empty.schema.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.recreate_user( '${user}' ); END;
+oracle.drop.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.drop_user( '${datasource.username}' ); END;
+oracle.create.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.create_user( '${datasource.username}', '${datasource.password}' ); END;
+oracle.empty.schema.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.recreate_user( '${datasource.username}' ); END;
 mysql.drop.schema.commands=DROP DATABASE IF EXISTS ${schema}
-mysql.create.user.commands=CREATE USER '${user}'@'localhost' IDENTIFIED BY PASSWORD '${password}'\n/\nGRANT ALL ON ${schema}.* TO '${user}'@'localhost' WITH GRANT OPTION\n/
+mysql.create.user.commands=CREATE USER '${datasource.username}'@'localhost' IDENTIFIED BY PASSWORD '${datasource.password}'\n/\nGRANT ALL ON ${schema}.* TO '${datasource.username}'@'localhost' WITH GRANT OPTION\n/
 mysql.create.schema.commands=CREATE DATABASE IF NOT EXISTS ${schema} DEFAULT CHARACTER SET 'utf8' DEFAULT COLLATE 'utf8_bin'
